<resources>
    <string name="app_name">PosseMonGo</string>
    <string name="title_programmer_detail">Programmer Detail</string>
    <string name="roster_reset">Roster reset!</string>
    <string name="roster_swipe_delete">removed from roster!</string>
    <string name="launch_instructions">Click to Select\nHold to Move\nSwipe to Remove</string>

    <string name="selection">... I choose you!</string>

    <string name="ios">iOS</string>
    <string name="android">Android</string>
    <string name="ruby">Ruby</string>

    <string name="posse_name">Name:</string>
    <string name="posse_artist">Artistic?:</string>
    <string name="posse_platform">Platform:</string>
    <string name="posse_favorite_color">Favorite Color:</string>
    <string name="posse_age">Age:</string>
    <string name="posse_weight">Weight (lbs):</string>
    <string name="posse_phone">Phone Number:</string>
    <string name="posse_locality">City:</string>
    <string name="posse_region">State:</string>
    <string name="posse_postalcode">ZIP:</string>
    <string name="posse_country">Country:</string>

    <string name="is_an_artist">Yes! Some would say, almost too much...</string>
    <string name="is_not_an_artist">Nope! Only stick figures here.</string>

</resources>
