<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserInterface.ProgrammerDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    style="?android:attr/textAppearanceLarge"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">
    <LinearLayout
        android:id="@+id/detailBackground"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/ivPosseMonContainer"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">
            <ImageView
                android:id="@+id/ivPosseMon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_name"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_platform"/>
            <TextView
                android:id="@+id/tvPlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_artist"/>
            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_favorite_color"/>
            <TextView
                android:id="@+id/tvColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_age"/>
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_weight"/>
            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_phone"/>
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_locality"/>
            <TextView
                android:id="@+id/tvLocality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_region"/>
            <TextView
                android:id="@+id/tvRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_postalcode"/>
            <TextView
                android:id="@+id/tvPostalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/posse_country"/>
            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
